fix add recipe
