# dist/openapi.yaml
@@ -126,8 +126,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RecipePreviewPages'
-        '204':
-          $ref: '#/components/responses/NoContent'
         '500':
           $ref: '#/components/responses/InternalServerError'
 
@@ -339,17 +337,31 @@ paths:
         Get the recipes that the user save before
       security:
         - OAuth2: [ read ]
+      parameters:
+        - in: query
+          name: skip
+          description: number of records to skip for pagination
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+          example: 0
+        - in: query
+          name: limit
+          description: maximum number of records to return
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            maximum: 30
+          example: 10
       responses:
         '200':
-          description: all favorite recipes results matching criteria
+          description: favorite recipes results matching criteria
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Recipe'
-        '204':
-          $ref: '#/components/responses/NoContent'
+                $ref: '#/components/schemas/RecipePreviewPages'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '500':
